# saudalrajhirealestate

./: .coveragerc  .env.example  .flake8  .gitignore  .odoo_sh_rebuild_trigger  .python_packages  BACKUP_GUIDE.md  BACKUP_INFO.md  COMPREHENSIVE_MANIFEST_FIX_REPORT.md  CRITICAL_FIXES_REPORT.md  CRITICAL_MODULE_FIX_GUIDE.md  DEPENDENCIES_FIXED.md  DEPENDENCY_FIX.md  DEPLOYMENT_FIX_COMPLETE_SUMMARY.md  DEPLOYMENT_FIX_DATE_RANGE.md  DEPLOYMENT_FIX_HR_PAYROLL_TRANSLATIONS.md  DEPLOYMENT_FIX_KS_DASHBOARD.md  DEPLOYMENT_FIX_LXML.md  DEPLOYMENT_FIX_REPORT_XLSX.md  DEPLOYMENT_MANUAL_COMMANDS.md  DEPLOYMENT_SERVER_FIX.sh  DEPLOYMENT_TRIGGER_SUCCESS.md  DEPLOY_NOW.md  EXECUTIVE_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_MIGRATION_SUCCESS.md  FINAL_PUSH_VERIFICATION.md  FINAL_VALIDATION_REPORT.md  HOTFIX_WEB_GOOGLE_MAPS_DOMAIN_VALIDATION.md  IMPLEMENTATION_SUMMARY.txt  LATEST_FIXES_COMPLETE.md  MIGRATION_SUMMARY.txt  MODULE_DISABLING_REPORT.md  MODULE_REINSTALL_GUIDE.md  ODOO18_COMPATIBILITY_FIXES.md  ODOO18_CRITICAL_FIX_SUMMARY.md  ODOO18_DEPENDENCIES_SUCCESS.md  ODOO18_ERROR_ANALYSIS.md  ODOO18_FIX_DOCUMENTATION.md  ODOO18_MANIFEST_MIGRATION_REPORT.md  (+56 more)
.cursor/: settings.json
Audit_log/: __manifest__.py
Contract_modification_Ocs/: __manifest__.py
account_accountant_branch/: __manifest__.py
account_advanced/: __init__.py  __manifest__.py
account_analytic_parent/: __manifest__.py
account_archive_merge/: __manifest__.py
account_bank_fees/: __manifest__.py
account_branch/: __manifest__.py
account_dynamic_reports/: __manifest__.py
account_einvoice_generate/: __manifest__.py
account_entry_approval/: __manifest__.py
account_financial_report/: README.rst  __manifest__.py
account_financial_report_sale/: README.rst  __manifest__.py
account_fix_existing_accounting/: __manifest__.py
account_invoice_ubl/: __manifest__.py
account_journal_edit/: __manifest__.py
account_move_line_report_xls/: __manifest__.py
account_move_multi_cancel/: __manifest__.py
account_operating_unit/: __manifest__.py
account_over_due/: __manifest__.py
account_parent/: __manifest__.py
account_payment_advanced/: __manifest__.py
account_payment_approval/: __manifest__.py
account_payment_mode/: __manifest__.py
account_payment_partner/: __manifest__.py
account_payment_review_cs/: __manifest__.py
account_payment_unece/: __manifest__.py
account_purchase_stock_report_non_billed/: README.rst  __manifest__.py
account_reports_branch/: __manifest__.py
account_reports_operating/: __manifest__.py
account_sale_stock_report_non_billed/: __manifest__.py
account_security/: __manifest__.py
account_tax_balance/: README.rst  __manifest__.py
account_tax_unece/: __manifest__.py
accounting_category_partner/: __init__.py  __manifest__.py
activity_dashboard_mngmnt/: __manifest__.py
analitic_ocs1/: __manifest__.py
analytic_account_ocs/: __manifest__.py
analytic_account_ocs2/: __manifest__.py
analytic_account_ocs_3/: __manifest__.py
analytic_account_ocs_4/: __manifest__.py
analytic_invoice_journal_ocs/: __manifest__.py
analytic_operating_unit/: __manifest__.py
analytic_operating_unit_access_all/: __manifest__.py
analytic_payment_link/: __manifest__.py
app_odoo_customize/: __manifest__.py
app_odoo_customize12/: __manifest__.py
barameg_geidea_pos/: __manifest__.py
base_account_budget/: __manifest__.py
base_accounting_kit/: __manifest__.py
base_branch/: __manifest__.py
base_dynamic_reports/: __manifest__.py
base_ubl/: __manifest__.py
base_ubl_payment/: __manifest__.py
base_unece/: __manifest__.py
bi_advance_branch/: __manifest__.py
branch/: __manifest__.py  hooks.py
bstt_account_invoice/: __manifest__.py
bstt_account_operating_unit_sequence/: __manifest__.py
bstt_account_report_levels/: __manifest__.py
bstt_finanical_report/: __manifest__.py
bstt_finger_print/: __manifest__.py
bstt_hr/: __manifest__.py
bstt_hr_attendance/: __manifest__.py
bstt_hr_letter_portal/: __manifest__.py
bstt_hr_payroll_analytic_account/: __manifest__.py
bstt_hr_payroll_analytic_account_new/: __manifest__.py
bstt_ksa_ninja_dashboard_back_button/: README.rst  __manifest__.py
bstt_partner/: __manifest__.py
bstt_remove_analytic_account/: __manifest__.py
budget_management_cs/: __manifest__.py
construction_cs/: __manifest__.py
construction_module_base/: __manifest__.py
contacts_maps/: __manifest__.py
contract_master_data/: __manifest__.py
contracts_management/: __manifest__.py
cost_center_reports/: __manifest__.py
cr_activity_report/: __manifest__.py
custom_hr_timesheet_fix/: __manifest__.py
customer_tickets/: __manifest__.py
database_cleanup/: __manifest__.py
date_range/: __manifest__.py
disable_publisher_update/: __manifest__.py
docs/: RPC_ERROR_Subscription_Info.md
dp_biostar_2_biomatric_attendance/: __init__.py  __manifest__.py  server.crt
dynamic_accounts_report/: __manifest__.py
dynamic_portal/: __manifest__.py
dynamic_report/: __manifest__.py
dynamic_xlsx_report/: __manifest__.py
einv_sa/: __manifest__.py
ejar_integration/: CHANGELOG.md  LICENSE  MEMORY_OPTIMIZATION.md  README.md  __init__.py  __manifest__.py
ent_employee_documents_expiry/: __manifest__.py
ent_hr_multi_company/: __manifest__.py
ent_hr_payroll_extension/: __manifest__.py
ent_hr_reminder/: __manifest__.py
ent_hr_resignation/: __manifest__.py
ent_hr_reward_warning/: __manifest__.py
ent_hrms_core/: __manifest__.py
ent_hrms_dashboard/: __manifest__.py
ent_loan_accounting/: __manifest__.py
ent_oh_employee_creation_from_user/: __manifest__.py
fix_template_errors/: __init__.py  __manifest__.py
glossy_elements/: __manifest__.py
glossy_path_advanced/: __manifest__.py
google_marker_icon_picker/: __manifest__.py
hide_menu_user/: __manifest__.py
hr_advanced/: __manifest__.py
hr_attendance_multi_company/: __manifest__.py
hr_attendance_summary/: __manifest__.py
hr_bonus_deduction/: __manifest__.py
hr_contract_types_ksa/: __manifest__.py
hr_employee_profile_portal/: __manifest__.py
hr_letter/: __manifest__.py
(+2070 files in other folders)
